# isVirtual

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  release.yml
isvirtual/: __init__.py  cli.py  main.py
src/: __init__.py  cli.py  main.py
