[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isvirtual"
description = "Tool to detect if the current directory is linked to a virtual environment, get the config of this env and more. Work with venv, virtualenv, pipenv, poetry and soon hatch and pdm."
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "Alex Mili" }]
license = { file = "LICENSE" }
requires-python = ">=3.3"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["virtual", "env", "venv", "virtualenv", "environment", "poetry", "pipenv", "pdm", "hatch"]
dependencies = ["platformdirs", "typer", "sty"]

[project.urls]
Homepage = "https://github.com/AlexMili/isVirtual"
Issues = "https://github.com/AlexMili/isVirtual/issues"
Repository = "https://github.com/AlexMili/isVirtual"
Documentation = "https://github.com/AlexMili/isVirtual"

[project.scripts]
isvirtual = "isvirtual.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["./isvirtual"]

[tool.hatch.version]
path = "isvirtual/VERSION.md"
pattern = "(?P<version>.*)"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["isvirtual"]
